# DIP_Hanhsin

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  DIP_works.h  main.cpp
src/1.1.GeometricTransformation/: CMakeLists.txt  GeometricTransformation.cpp  GeometricTransformation.h
src/2.1.Gray-LevelTransformation/: CMakeLists.txt  Gray-LevelTransformation.cpp
src/2.2.HistogramProcessing/: CMakeLists.txt  HistogramProcessing.cpp
src/3.1.Smoothing/: CMakeLists.txt  Smoothing.cpp
src/3.2.Sharpening/: CMakeLists.txt  Sharpening.cpp
src/4.1.ImageEnhancement/: CMakeLists.txt  ImageEnhancement.cpp
src/5.1.ImageRestoration/: CMakeLists.txt  ImageRestoration.cpp
